minor alterations to prepare for turboprop

--- a/notebook_turbofan_performance.ipynb
+++ b/notebook_turbofan_performance.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,15 +126,15 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\mmmon\\OneDrive\\Documents\\3 - EMBRAER\\Fase 1 - Fundamentos\\1 - ITA\\AC-701 - Sistemas Propulsivos\\Projeto\\aircraft\\calculation_modules\\new_propulsion\\process\\nozzle.py:24: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  u_s = (2*efficiency*(1/exp)*R*inlet_temperature*(1 - (self.P_out/inlet_pressure)**exp))**(1/2)\n",
+      "  u_s = (2*efficiency*(1/exp)*self.R_mean*inlet_temperature*(1 - (self.P_out/inlet_pressure)**exp))**(1/2)\n",
       "c:\\Users\\mmmon\\OneDrive\\Documents\\3 - EMBRAER\\Fase 1 - Fundamentos\\1 - ITA\\AC-701 - Sistemas Propulsivos\\Projeto\\aircraft\\calculation_modules\\new_propulsion\\process\\nozzle.py:24: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  u_s = (2*efficiency*(1/exp)*R*inlet_temperature*(1 - (self.P_out/inlet_pressure)**exp))**(1/2)\n",
+      "  u_s = (2*efficiency*(1/exp)*self.R_mean*inlet_temperature*(1 - (self.P_out/inlet_pressure)**exp))**(1/2)\n",
       "c:\\Users\\mmmon\\OneDrive\\Documents\\3 - EMBRAER\\Fase 1 - Fundamentos\\1 - ITA\\AC-701 - Sistemas Propulsivos\\Projeto\\aircraft\\calculation_modules\\new_propulsion\\process\\nozzle.py:24: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  u_s = (2*efficiency*(1/exp)*R*inlet_temperature*(1 - (self.P_out/inlet_pressure)**exp))**(1/2)\n",
+      "  u_s = (2*efficiency*(1/exp)*self.R_mean*inlet_temperature*(1 - (self.P_out/inlet_pressure)**exp))**(1/2)\n",
       "c:\\Users\\mmmon\\OneDrive\\Documents\\3 - EMBRAER\\Fase 1 - Fundamentos\\1 - ITA\\AC-701 - Sistemas Propulsivos\\Projeto\\aircraft\\calculation_modules\\new_propulsion\\process\\nozzle.py:24: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  u_s = (2*efficiency*(1/exp)*R*inlet_temperature*(1 - (self.P_out/inlet_pressure)**exp))**(1/2)\n",
+      "  u_s = (2*efficiency*(1/exp)*self.R_mean*inlet_temperature*(1 - (self.P_out/inlet_pressure)**exp))**(1/2)\n",
       "c:\\Users\\mmmon\\OneDrive\\Documents\\3 - EMBRAER\\Fase 1 - Fundamentos\\1 - ITA\\AC-701 - Sistemas Propulsivos\\Projeto\\aircraft\\calculation_modules\\new_propulsion\\process\\nozzle.py:24: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  u_s = (2*efficiency*(1/exp)*R*inlet_temperature*(1 - (self.P_out/inlet_pressure)**exp))**(1/2)\n"
+      "  u_s = (2*efficiency*(1/exp)*self.R_mean*inlet_temperature*(1 - (self.P_out/inlet_pressure)**exp))**(1/2)\n"
      ]
     },
     {
