notebook example modif

--- a/notebook_base_example.ipynb
+++ b/notebook_base_example.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "\n",
     "''' Component Parameters'''\n",
-    "aircraft_name = 'TurboFan23'\n",
+    "aircraft_name = 'TurboFan22'\n",
     "aircraft = load_aircraft(aircraft_name)"
    ]
   },
@@ -87,12 +87,12 @@
    "outputs": [],
    "source": [
     "''' Analysis Parameters'''\n",
-    "mach = 0\n",
-    "Pa = 101.63\n",
+    "mach = 0.85\n",
+    "Pa = 18.75\n",
     "Po = Pa\n",
-    "Ta = 290\n",
+    "Ta = 216.7\n",
     "N_2 = 1.0\n",
-    "rotation_flag = True"
+    "rotation_flag = False"
    ]
   },
   {
@@ -136,27 +136,27 @@
       "-----------------------------------------------------------------\n",
       "Thermodynamic States\n",
       "-----------------------------------------------------------------\n",
-      "T_0 :  {1: {'intake': 290.0, 'fan': 353.000765717894, 'compressor': 512.0263157102492, 'combustor': 1548.8267377497195, 'turbine_compressor': 1389.8011877573645, 'turbine_fan': 1037.5056576402842, 'nozzle_hot_air': 1037.5056576402842}, 2: {'intake': 290.0, 'fan': 353.000765717894, 'nozzle_fan': 353.000765717894}}\n",
-      "P_0 :  {1: {'intake': 101.63, 'fan': 194.0878718393972, 'compressor': 3329.9656171485362, 'combustor': 3163.4673362911094, 'turbine_compressor': 1995.525802907943, 'turbine_fan': 556.7600764258985, 'nozzle_hot_air': 556.7600764258985}, 2: {'intake': 101.63, 'fan': 194.0878718393972, 'nozzle_fan': 194.0878718393972}}\n",
-      "outlet_speed :  {1: {'nozzle_hot_air': 896.0277747817421}, 2: {'nozzle_fan': 343.2577277437807}}\n",
+      "T_0 :  {1: {'intake': 248.01314999999997, 'fan': 283.85083483934795, 'compressor': 699.879407393919, 'combustor': 1600.0, 'turbine_compressor': 1183.971427445429, 'turbine_fan': 968.9453184093411, 'nozzle_hot_air': 968.9453184093411}, 2: {'intake': 248.01314999999997, 'fan': 283.85083483934795, 'nozzle_fan': 283.85083483934795}}\n",
+      "P_0 :  {1: {'intake': 29.67483004089143, 'fan': 44.51224506133714, 'compressor': 890.2449012267427, 'combustor': 890.2449012267427, 'turbine_compressor': 225.2805872136325, 'turbine_fan': 90.8276981066785, 'nozzle_hot_air': 90.8276981066785}, 2: {'intake': 29.67483004089143, 'fan': 44.51224506133714, 'nozzle_fan': 44.51224506133714}}\n",
+      "outlet_speed :  {1: {'nozzle_hot_air': 840.3352159021244}, 2: {'nozzle_fan': 350.5319446225772}}\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Propulsion Efficiencies\n",
       "-----------------------------------------------------------------\n",
-      "thermal_efficiency :  0.589500784930627\n",
-      "propulsion_efficiency :  0.0\n",
-      "total_efficiency :  0.0\n",
+      "thermal_efficiency :  0.5954851094443059\n",
+      "propulsion_efficiency :  0.4480959976330858\n",
+      "total_efficiency :  1.271259076342436\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Propulsion Performance\n",
       "-----------------------------------------------------------------\n",
-      "specific_thrust :  2496.0694786968043\n",
-      "fuel_air_ratio :  {1: {'combustor': 0.026593046218742526}}\n",
+      "specific_thrust :  1104.1256166259031\n",
+      "fuel_air_ratio :  {1: {'combustor': 0.02311525675071141}}\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Fuel Consumption\n",
       "-----------------------------------------------------------------\n",
-      "TSFC :  1.0653968747947967e-05\n",
+      "TSFC :  2.0935350473390257e-05\n",
       "-----------------------------------------------------------------\n"
      ]
     }
