minor correction notebook course example

--- a/notebook_course_examples.ipynb
+++ b/notebook_course_examples.ipynb
@@ -768,10 +768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 7.3: TurboFan - Comparing to TurboProp 7.2\n",
-    "\n",
-    "Simulate a turbofan engine to fulfill the same mission\n",
-    "of the turbofan engine in example 8.2, i.e. generate thrust of 4.26 kN at 7,000 m and flight Mach 0.45. To make the simulations we took as reference data from the PW545B engine, with a total pressure ratio of 12.5 and a passage ratio of 4.2 in the take-off condition at sea level. Some assumptions were made for the simulation as will be discussed in the following."
+    "## Example 7.3: TurboFan - Comparing to TurboProp 7.2"
    ]
   },
   {
@@ -779,6 +776,9 @@
    "metadata": {},
    "source": [
     "### Exercise Information\n",
+    "\n",
+    "Simulate a turbofan engine to fulfill the same mission\n",
+    "of the turbofan engine in example 8.2, i.e. generate thrust of 4.26 kN at 7,000 m and flight Mach 0.45. To make the simulations we took as reference data from the PW545B engine, with a total pressure ratio of 12.5 and a passage ratio of 4.2 in the take-off condition at sea level. Some assumptions were made for the simulation as will be discussed in the following.\n",
     "\n",
     "Operating Engine Parameters:\n",
     "\n",
