corrections in turboprop

--- a/notebook_course_examples.ipynb
+++ b/notebook_course_examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -219,13 +219,13 @@
       "-----------------------------------------------------------------\n",
       "Propulsion Performance\n",
       "-----------------------------------------------------------------\n",
-      "specific_thrust :  1104.1256166259031\n",
+      "specific_thrust :  1.1041256166259033\n",
       "fuel_air_ratio :  {1: {'combustor': 0.02311525675071141}}\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Fuel Consumption\n",
       "-----------------------------------------------------------------\n",
-      "TSFC :  2.0935350473390257e-05\n",
+      "TSFC :  0.020935350473390256\n",
       "-----------------------------------------------------------------\n"
      ]
     }
@@ -327,13 +327,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "753.6243143275352\n",
+      "131.08789603888246\n",
+      "753.6243143275352\n",
+      "131.08789603888246\n",
       "-----------------------------------------------------------------\n",
       "Thermodynamic States\n",
       "-----------------------------------------------------------------\n",
@@ -344,18 +348,18 @@
       "-----------------------------------------------------------------\n",
       "Propulsion Performance\n",
       "-----------------------------------------------------------------\n",
-      "specific_thrust :  1934.0184032052782\n",
+      "specific_thrust :  1.9340184032052783\n",
       "fuel_air_ratio :  {1: {'combustor': 0.019280271727406255}}\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Fuel Consumption\n",
       "-----------------------------------------------------------------\n",
-      "TSFC :  9.969021853904165e-06\n",
+      "TSFC :  0.009969021853904164\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Propulsion Results\n",
       "-----------------------------------------------------------------\n",
-      "thrust :  253526.40337665897\n",
+      "thrust :  253.52640337665898\n",
       "fuel_consumption :  2.5274102558036358\n",
       "-----------------------------------------------------------------\n"
      ]
@@ -468,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -485,21 +489,23 @@
       "-----------------------------------------------------------------\n",
       "Propulsion Performance\n",
       "-----------------------------------------------------------------\n",
-      "specific_thrust :  394.7567114064619\n",
+      "specific_thrust :  0.3947567114064619\n",
       "specific_power_turbine :  288.78854628350007\n",
+      "turbine_power :  2451.8147579469155\n",
       "fuel_air_ratio :  {1: {'combustor': 0.022774299223627482}}\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Fuel Consumption\n",
       "-----------------------------------------------------------------\n",
+      "TSFC :  0.05769198740785407\n",
       "BSFC :  7.886150443539489e-05\n",
       "EBSFC :  7.886150443539489e-05\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Propulsion Results\n",
       "-----------------------------------------------------------------\n",
-      "turbine_thrust :  2451.8147579469155\n",
-      "thrust :  3351.4844798408612\n",
+      "propeller_thrust :  0\n",
+      "thrust :  3.351484479840862\n",
       "fuel_consumption :  0.19335380040859734\n",
       "-----------------------------------------------------------------\n"
      ]
@@ -556,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -573,21 +579,23 @@
       "-----------------------------------------------------------------\n",
       "Propulsion Performance\n",
       "-----------------------------------------------------------------\n",
-      "specific_thrust :  287.7819262342399\n",
+      "specific_thrust :  0.2877819262342399\n",
       "specific_power_turbine :  269.6093387613115\n",
+      "turbine_power :  2045.4357692521303\n",
       "fuel_air_ratio :  {1: {'combustor': 0.020601594250603105}}\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Fuel Consumption\n",
       "-----------------------------------------------------------------\n",
+      "TSFC :  0.07158751948110337\n",
       "BSFC :  7.641276205510801e-05\n",
       "EBSFC :  7.641276205510801e-05\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Propulsion Results\n",
       "-----------------------------------------------------------------\n",
-      "turbine_thrust :  2045.4357692521303\n",
-      "thrust :  2183.3051049649366\n",
+      "propeller_thrust :  0\n",
+      "thrust :  2.1833051049649366\n",
       "fuel_consumption :  0.15629739673486984\n",
       "-----------------------------------------------------------------\n"
      ]
@@ -694,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -711,22 +719,24 @@
       "-----------------------------------------------------------------\n",
       "Propulsion Performance\n",
       "-----------------------------------------------------------------\n",
-      "specific_thrust :  231.10126791268905\n",
+      "specific_thrust :  0.23110126791268906\n",
       "specific_power_turbine :  225.97163362743353\n",
+      "turbine_power :  633.1012310233954\n",
       "fuel_air_ratio :  {1: {'combustor': 0.01873379464459967}}\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Fuel Consumption\n",
       "-----------------------------------------------------------------\n",
+      "TSFC :  0.01203110317312872\n",
       "BSFC :  8.29033022591086e-05\n",
-      "EBSFC :  5.671407553190325e-07\n",
+      "EBSFC :  7.239339881651162e-05\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Propulsion Results\n",
       "-----------------------------------------------------------------\n",
-      "turbine_thrust :  633.1012310233954\n",
-      "thrust :  647.472848064716\n",
-      "fuel_consumption :  0.00035905751035601773\n",
+      "propeller_thrust :  3.715068305548974\n",
+      "thrust :  0.6474728480647161\n",
+      "fuel_consumption :  0.045832349908701116\n",
       "-----------------------------------------------------------------\n"
      ]
     }
@@ -839,36 +849,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "29.201538798659595\n",
+      "4.818670503828571\n",
+      "29.201538798659595\n",
+      "4.818670503828571\n",
       "-----------------------------------------------------------------\n",
       "Thermodynamic States\n",
       "-----------------------------------------------------------------\n",
-      "T_0 :  {1: {'intake': 256.535275, 'fan': 274.9178291774436, 'compressor': 356.25579863797395, 'combustor': 1269.7107487500002, 'turbine_compressor': 1188.37277928947, 'turbine_fan': 1069.1721236770925, 'nozzle_hot_air': 1069.1721236770925}, 2: {'intake': 256.535275, 'fan': 274.9178291774436, 'nozzle_fan': 274.9178291774436}}\n",
-      "P_0 :  {1: {'intake': 46.91969321119418, 'fan': 58.78010714917762, 'compressor': 359.5861389203932, 'combustor': 359.5861389203932, 'turbine_compressor': 265.41201439180213, 'turbine_fan': 160.9214605693203, 'nozzle_hot_air': 160.9214605693203}, 2: {'intake': 46.91969321119418, 'fan': 58.78010714917762, 'nozzle_fan': 58.78010714917762}}\n",
-      "outlet_speed :  {1: {'nozzle_hot_air': 832.5293317104374}, 2: {'nozzle_fan': 230.60232871671082}}\n",
+      "T_0 :  {1: {'intake': 256.535275, 'fan': 277.3247912213166, 'compressor': 510.56896553744406, 'combustor': 1269.7107487500002, 'turbine_compressor': 1036.4665744338727, 'turbine_fan': 910.4803996041571, 'nozzle_hot_air': 910.4803996041571}, 2: {'intake': 256.535275, 'fan': 277.3247912213166, 'nozzle_fan': 277.3247912213166}}\n",
+      "P_0 :  {1: {'intake': 46.91969321119418, 'fan': 60.47719058725768, 'compressor': 369.9680131721058, 'combustor': 369.9680131721058, 'turbine_compressor': 144.45095414227217, 'turbine_fan': 79.11495983758769, 'nozzle_hot_air': 79.11495983758769}, 2: {'intake': 46.91969321119418, 'fan': 60.47719058725768, 'nozzle_fan': 60.47719058725768}}\n",
+      "outlet_speed :  {1: {'nozzle_hot_air': 557.1337961671252}, 2: {'nozzle_fan': 240.10578428753092}}\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Propulsion Performance\n",
       "-----------------------------------------------------------------\n",
-      "specific_thrust :  1196.1680873471878\n",
-      "fuel_air_ratio :  {1: {'combustor': 0.023319045009677557}}\n",
+      "specific_thrust :  0.9226255824864726\n",
+      "fuel_air_ratio :  {1: {'combustor': 0.019379676479162382}}\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Fuel Consumption\n",
       "-----------------------------------------------------------------\n",
-      "TSFC :  1.9494789450029196e-05\n",
+      "TSFC :  0.02100491992313309\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Propulsion Results\n",
       "-----------------------------------------------------------------\n",
-      "thrust :  5386.729403125597\n",
-      "fuel_consumption :  0.10501315553821496\n",
+      "thrust :  4.44582868040522\n",
+      "fuel_consumption :  0.0933842754238801\n",
       "-----------------------------------------------------------------\n"
      ]
     }
@@ -924,7 +938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
