notebooks update + specific thrust unit changes

--- a/notebook_base_example.ipynb
+++ b/notebook_base_example.ipynb
@@ -144,19 +144,23 @@
       "Propulsion Efficiencies\n",
       "-----------------------------------------------------------------\n",
       "thermal_efficiency :  0.5954851094443059\n",
-      "propulsion_efficiency :  0.4480959976330858\n",
+      "propulsion_efficiency :  0.00044809599763308576\n",
       "total_efficiency :  1.271259076342436\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Propulsion Performance\n",
       "-----------------------------------------------------------------\n",
-      "specific_thrust :  1104.1256166259031\n",
+      "specific_thrust :  1.1041256166259033\n",
       "fuel_air_ratio :  {1: {'combustor': 0.02311525675071141}}\n",
       "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n",
       "Fuel Consumption\n",
       "-----------------------------------------------------------------\n",
-      "TSFC :  2.0935350473390257e-05\n",
+      "TSFC :  0.020935350473390256\n",
+      "-----------------------------------------------------------------\n",
+      "-----------------------------------------------------------------\n",
+      "Propulsion Results\n",
+      "-----------------------------------------------------------------\n",
       "-----------------------------------------------------------------\n"
      ]
     }
