final_test layout modif

--- a/notebook_final_test.ipynb
+++ b/notebook_final_test.ipynb
@@ -1304,7 +1304,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 3: Turbofan Engine Evolution\n",
+    "# Exercise 3: Turbofan Engine Evolution\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "We want to produce 100 kN at the start of takeoff (Mach = 0) at sea level (Ta =288.2K and Pa = 101.3 kPa) using turbofan engines with technologies from different decades, as shown in the table below (static design point at sea level)."
    ]
   },
